--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,31 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# Next.js
+.next/
+out/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+# IDEs and editors
+.idea/
+.vscode/
+*.swp
+*.swo
+*.sublime
+*.sublime-workspace
+*.sublime-project
+*.sublimets
+*.sublime-goto
+
+# OS files
+.DS_Store
+Thumbs.db
